--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "authors" : [
         {
             "name" : "Vinícius Krolow",
-            "email" : "krolow@gmail.com",
+            "email" : "krolow@gmail.com"
         }
     ],
     "require" : {
         "php" : ">=5.3.0",
-        "symfony/console" : "2.1.*"
+        "symfony/console"       : "2.1.*",
+        "evenement/evenement"   : "1.0.0",
+        "kriswallsmith/spork"   : "0.1"
     },
     "autoload" : {
         "psr-0" : {
