--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-# Bootstrap
-app/bootstrap*
-
-# Symfony directories
-vendor/*
-*/logs/*
-*/cache/*
-web/uploads/*
-web/bundles/*
-
-# Configuration files
-app/config/parameters.ini
+coverage/
+composer.lock
+.DS_Store
+vendor/
