--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     ],
     "require" : {
         "php" : ">=5.3.0",
-        "symfony/console"       : "2.1.*",
-        "evenement/evenement"   : "1.0.0",
-        "kriswallsmith/spork"   : "0.1",
-        "kriswallsmith/buzz"    : "0.7"
+        "symfony/console" : "2.1.*",
+        "evenement/evenement" : "1.0.0",
+        "kriswallsmith/spork" : "0.1",
+        "kriswallsmith/buzz" : "0.7",
+        "symfony/filesystem" : "2.3.2"
     },
     "autoload" : {
         "psr-0" : {
